SERVER-68238 Coverity analysis defect 123341: Pointer to local outside scope